--- a/allspaxfaces.html
+++ b/allspaxfaces.html
@@ -23,7 +23,7 @@
 
     </head>
     <body>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Blush.png
@@ -31,7 +31,7 @@
                 Blush
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Confused.png
@@ -39,7 +39,7 @@
                 Confused
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/spax/Disappointed.png
@@ -47,7 +47,7 @@
             Disappointed
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/spax/Dizzy.png
@@ -55,7 +55,7 @@
             Dizzy
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/spax/Happy.png
@@ -63,7 +63,7 @@
             Happy
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/spax/Look.png
@@ -71,7 +71,7 @@
             Look
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/spax/Neutral.png
@@ -79,7 +79,7 @@
             Neutral
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/spax/Pensive.png
@@ -87,7 +87,7 @@
             Pensive
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/spax/Smirk.png
@@ -95,7 +95,7 @@
             Smirk
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/spax/Surprised.png
@@ -103,7 +103,7 @@
             Surprised
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/spax/Sus.png
@@ -111,7 +111,7 @@
             Sus
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/spax/Sweat_Drop.png
@@ -119,7 +119,7 @@
             Sweat Drop
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/spax/Talk.png
@@ -127,7 +127,7 @@
             Talk
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/spax/Worried.png
