--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
     <script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
     <body>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <a href="sitelist.html">Click here</a> to see my full site list!<br>
                 -Spax</span>
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/claire/Neutral.png
@@ -37,7 +37,7 @@
                 Hey nerds. It's me, Claire.
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/claire/Happy.png
@@ -45,7 +45,7 @@
                 I am now on a poggers website. Woo!
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/claire/Sigh.png
@@ -53,7 +53,7 @@
             Anyways it's time for some fucking debugging.
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/aimottle/Unsure.png
@@ -61,7 +61,7 @@
             Spax, you don't know what you're doing at all, do you?
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/spax/Worried.png
@@ -69,7 +69,7 @@
             Well no... but-
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/spax/Worried.png
@@ -77,7 +77,7 @@
             ...
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/spax/Pensive.png
@@ -96,7 +96,7 @@
         <br>
         <br>
         <br>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/aimottle/Neutral.png
@@ -104,7 +104,7 @@
                 HOLY SHIT THEY ACTUALLY FIXED MOST OF THE CODE
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/claire/Aghast.png
@@ -112,7 +112,7 @@
                 How tf-
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/spax/Dizzy.png
@@ -120,7 +120,7 @@
                 I have no clue how I did it I'm so tired now
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/yoki/Sweat_Drop.png
@@ -130,7 +130,7 @@
         </div>
         <!--
         //this works; don't fucking touch it kiddo
-        <div class="text-box flex-container"  id="ominous-countdown"></div>
+        <div class="text-box flex-container unselectable"  id="ominous-countdown"></div>
         </div>
         <script type="text/javascript">(function(){window['__CF$cv$params']={r:'6d98c0e03e54c7d5',m:'fYOcFE2KHU8Uamq_CEoNI9GgDqzzTxlgAY8aDwGqMMo-1644196382-0-AdtPtcTeuNBR9RU7N0f1bUSknvAZAZlqUbnsWRsrjxZ3iTvk5j4qWutdSePRK2YPyqC5PUy6SPea/L40oaDl6jvtNjhP7KNm2RByM9wtAspDORing5CA53EOj9d1JmRRi7qHucVUBHLxi4LBzr/iAu4fgwyHD5jNEfDSeP0nowWVBgDFJbFCkoTt6dFuA3CdYQ==',s:[0xeb660911f4,0x789e72129e],}})();</script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
