--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -24,13 +24,13 @@
 
     </head>
     <body>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div style="color:red;">
                 Current status: Broken.<br>
                 -Spax
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div id="date">
                     <img src="
                 images/spax/Worried.png
@@ -38,16 +38,16 @@
                 This text should be replaced by the js. If you're seeing this, it means that my code is broken :(
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 (And <a href="index.html">click here</a> to go back to the main page!)
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div id="debug">
             </div>
         </div>
-        <!--<div class="text-box flex-container">
+        <!--<div class="text-box flex-container unselectable">
             <div id="debug2">
             </div>
         </div>-->
