--- a/plannedchanges.html
+++ b/plannedchanges.html
@@ -23,7 +23,7 @@
 
     </head>
     <body>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Smirk.png
@@ -31,7 +31,7 @@
                 Yo! It's me, Spax.
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Happy.png
@@ -39,7 +39,7 @@
                 This is my kinda publicly viewable list for what I want to change on the site.
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Neutral.png
@@ -47,7 +47,7 @@
                 I'm still relatively new to web development and design, so a lot of things that I want to put on here I still have no clue how to do.
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Look.png
@@ -55,7 +55,7 @@
                 I mean, even these text boxes! It took almost a week to get them to how they look now! And only with a shit ton of help from someone named Mathew on Discord!
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Worried.png
@@ -63,7 +63,7 @@
                 (This site would be less than half of what it is now if he didn't help me out at all. I thank him massively.)
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Neutral.png
@@ -71,7 +71,7 @@
                 But yea I guess now I'll talk about things that I'm currently working on or planning on working on for this site. 
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Smirk.png
@@ -79,7 +79,7 @@
                 First, I want to make a real front page. Not like the test/placeholder one I have up at the current moment. I'll move that to a different url like test.html or something like that.
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Smirk.png
@@ -87,7 +87,7 @@
                 Then I want to put actual relevant stuff on the page. Things like my youtube, my modfiles for <a href="https://noti.tg">NotITG</a>, and a few things about my personality, along with relevant links like that <a href="isspaxatschool.html">school schedule site thing</a>. Speaking of which...
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Look.png
@@ -95,7 +95,7 @@
                 <s>I need to fix the Javascript on that page. It currently only works on the weekends. There's some sort of bug in either the way that I've formatted the code or just the code in general. Might have to use a slightly more reliable system for that... but that's for future me to deal with!</s><br>
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Blush.png
@@ -103,7 +103,7 @@
                 <s>UPDATE: I FUCKING FIXED IT LET'S GOOOOOOOO! Gonna be talking about this in a sec but I'll add a sprite that encapsulates the "LET'S FUCKING GOOOO" mood much better than :blush: does at the moment.</s>
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Pensive.png
@@ -111,7 +111,7 @@
                 (Nevermind it broke again.)
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Happy.png
@@ -119,7 +119,7 @@
                 I also wanna add backgrounds to all of the pages. Change it from the boring and flat green that it is right now to possibly a repeating image that looks nice. I already have one in mind but I have to edit it a little more for it to look okay.
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Dizzy.png
@@ -127,7 +127,7 @@
                 (I also gotta learn how to even get it to show up properly on the site.)
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Smirk.png
@@ -135,7 +135,7 @@
                 Another thing I wanna do is add more Spax faces to the existing 14. I'll try to include more emotions and stuff. I already got a few in mind.
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Worried.png
@@ -143,7 +143,7 @@
                 One of the last things I wanna do is to register a domain name for the site, so that it isn't specifically "github.io". But that also requires money... and I don't have that...
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Pensive.png
@@ -151,7 +151,7 @@
                 Alas, so many things to do...
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Surprised.png
@@ -159,7 +159,7 @@
                 Oh! And one more thing!
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Worried.png
@@ -168,7 +168,7 @@
             </div>
         </div>
 
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Smirk.png
@@ -176,7 +176,7 @@
                 <s>I'm planning on vectorizing all of the characters from the original spritesheet, and then figuring out how to make that into a font.</s>
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Happy.png
@@ -184,7 +184,7 @@
                 <s>And then I'll release it! Woo!</s>
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Blush.png
@@ -192,7 +192,7 @@
                 UPDATE: WOOO FINISHED THE FONT! Linked correctly in the page and working as intended!
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Look.png
@@ -200,7 +200,7 @@
                 Yea jeez I have a lot of ideas... and I'm just a small internet user who wants to impact the world in a meaningful way...
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Pensive.png
@@ -208,7 +208,7 @@
                 Aughh, I hope I can do something cool with this site. 
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Neutral.png
@@ -216,7 +216,7 @@
                 Anyways, thank you for taking the time to read about my silly big ideas for this webpage. I'll update this site like every week or so, and I'll put the outdated ones into a folder on the <a href="https://github.com/SpiritAxolotl/spiritaxolotl.github.io">github repo</a>, so you can see the history there. 
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Happy.png
@@ -224,7 +224,7 @@
                 Cya! 
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 (<a href="index.html">Click here</a> to go back to the main page!)
             </div>
