--- a/rangalshutthehellup.html
+++ b/rangalshutthehellup.html
@@ -33,7 +33,7 @@
 
     </head>
     <body>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/claire/Mad.png
@@ -41,7 +41,7 @@
                 Rangal shut the hell up.
             </div> 
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/yoki/Upset.png
@@ -49,7 +49,7 @@
                 You went too far this time.
             </div> 
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/este/Stare.png
@@ -57,7 +57,7 @@
                 ...wtf
             </div> 
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/caina/Disapproval.png
@@ -65,7 +65,7 @@
                 I can't believe you would say something like that.
             </div> 
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/dragon/Stern.png
@@ -73,7 +73,7 @@
                 I hope you regret what you said.
             </div> 
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/prince/Appalled.png
@@ -81,7 +81,7 @@
                 This is going in your permanent records!
             </div> 
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/tigertaur/Grin.png
@@ -89,7 +89,7 @@
                 Now I'm considering beating you up.
             </div> 
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/woof/Look.png
@@ -97,7 +97,7 @@
                 Ow... that hurt my feelings...
             </div> 
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/zera/Sneer.png
@@ -105,7 +105,7 @@
                 God (me), even my hellions wouldn't say such a thing.
             </div> 
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/harp/Excited.png
@@ -113,7 +113,7 @@
                 You're looking tastier than usual today.
             </div> 
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/aimottle/Angry.png
@@ -121,7 +121,7 @@
                 BRO I AM GOING TO THROW A WRENCH AT YOU-
             </div> 
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/charles/Look_Down.png
@@ -129,7 +129,7 @@
                 ...I have nothing to say
             </div> 
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/tem/Look_Down.png
@@ -137,7 +137,7 @@
                 Rangal... that's not cool...
             </div> 
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Worried.png
@@ -145,7 +145,7 @@
                 Rangal, I suggest you apologize for what you said.
             </div> 
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Disappointed.png
