--- a/sitelist.html
+++ b/sitelist.html
@@ -22,7 +22,7 @@
 
     <script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
     <body>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Smirk.png
@@ -31,7 +31,7 @@
                 This is my full site list.
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/spax/Look.png
@@ -39,7 +39,7 @@
                 I'll try to keep this page as up-to-date as possible... but don't expect me to be perfect. 
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/spax/Blush.png
@@ -48,43 +48,43 @@
             </div>
         </div>
         <br>
-        <!--<div class="text-box flex-container">
+        <!--<div class="text-box flex-container unselectable">
             <div>
             <a href=iwanttodie.html>I want to die</a><br>
             <span style="color:red;">A page that talks about my constant suffering being alive. I'm sorry.</span>
             </div>
         </div>-->
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
             <a href=index.html>Main Page</a><br>
             The main page to the website. Right now it's a test placeholder but I'll put useful stuff on here eventually.
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
             <a href=isspaxatschool.html>Is Spax At School?</a><br>
             This page uses JavaScript to see my schedule and update the text box to state whether I'm currently at school or not, but it doesn't fully work right now. I'll overhaul it another time, but just know that this exists.
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
             <a href=allspaxfaces.html>All Spax Faces</a><br>
             When originally making this site and testing the text box functionality, I went a little too far with a gag and ended up making 14 sprites for my axolotl character. I only ended up using two of them but in this site, you can see all the expressions I made for them! (No but seriously I spent two fucking hours on them aaaa)
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
             <a href=plannedchanges.html>Planned Changes</a><br>
             Here I'll try to do weekly updates stating what I want to change about this site. Just to get my ideas down and so viewers can see them. But yea enjoy my emotional rants here. 
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
             <a href=rangalshutthehellup.html>Shut the HELL up Rangal</a><br>
             I made this page for whenever a person in the DEP discord server says something edgy, horny, controversial, etc. Meant to be lighthearted and Rangal knows it's a joke. We all good.
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
             <a href=sitelist.html>Site List</a><br>
             ...it's literally this page. Hey, I wasn't lying when I said I would include *every* site on this page.
