--- a/test.html
+++ b/test.html
@@ -22,12 +22,12 @@
 
     </head>
     <body>
-        <div class="alt-text-box flex-container">
+        <div class="alt-text-box flex-container unselectable">
             <div>
                 <a href="isspaxatschool.html">Click here</a> to see if I'm at school!
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/claire/Neutral.png
@@ -35,15 +35,15 @@
                 Hey nerds. It's me, Claire.
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                     <img src="
                 images/claire/Happy.png
                     "></img>
                 I am now on a poggers website. Woo!
             </div>
-        </div class="text-box flex-container">
-        <div class="text-box flex-container">
+        </div class="text-box flex-container unselectable">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/claire/Sigh.png
@@ -51,7 +51,7 @@
             Anyways it's time for some fucking debugging.
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/aimottle/Unsure.png
@@ -59,7 +59,7 @@
             Spax, you don't know what you're doing at all, do you?
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/spax/Worried.png
@@ -67,7 +67,7 @@
             Well no... but-
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/spax/Worried.png
@@ -75,7 +75,7 @@
             ...
             </div>
         </div>
-        <div class="text-box flex-container">
+        <div class="text-box flex-container unselectable">
             <div>
                 <img src="
             images/spax/Pensive.png
@@ -83,7 +83,7 @@
             </div>
         </div>
         <div>
-            <div class="text-box flex-container">
+            <div class="text-box flex-container unselectable">
                 <div>
                     <img src="
                 images/yoki/Sweat_Drop.png
@@ -92,7 +92,7 @@
                 </div>
             </div>
         </div>
-        <div class="text-box flex-container" id="ominous-countdown">
+        <div class="text-box flex-container unselectable" id="ominous-countdown">
         The Final Countdown:tm:
         </div>
         <script src="jquery.countdown.min.js">
