added 2 more faces

--- a/allspaxfaces.html
+++ b/allspaxfaces.html
@@ -58,6 +58,14 @@
         <div class="text-box flex-container unselectable">
             <div>
                 <img src="
+            images/spax/Enraged.png
+                "></img>
+            Enraged
+            </div>
+        </div>
+        <div class="text-box flex-container unselectable">
+            <div>
+                <img src="
             images/spax/Happy.png
                 "></img>
             Happy
@@ -125,6 +133,14 @@
             images/spax/Talk.png
                 "></img>
             Talk
+            </div>
+        </div>
+        <div class="text-box flex-container unselectable">
+            <div>
+                <img src="
+            images/spax/Woo.png
+                "></img>
+            Woo!
             </div>
         </div>
         <div class="text-box flex-container unselectable">
